--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/jest": "^29.5.10",
     "@types/node": "^20.10.3",
     "cypress": "^13.6.0",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
     "ts-jest": "^29.1.1",
